[project]
name = "usni-fleet-tracker-feed"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "ruff>=0.9.9",
]
migrate = [
    "rich>=13.9.4",
]
